infra/k8s/k8s-prod/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: 803635532235.dkr.ecr.ap-southeast-1.amazonaws.com/uwc:redis
          imagePullPolicy: Always
