infra/k8s/k8s-prod/communication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication
  template:
    metadata:
      labels:
        app: communication
    spec:
      containers:
        - name: communication
          image: 803635532235.dkr.ecr.ap-southeast-1.amazonaws.com/uwc:communication
          # imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: communication-srv
spec:
  selector:
    app: communication
  ports:
    - name: communication
      protocol: TCP
      port: 3000
      targetPort: 3000
