infra/k8s/k8s-prod/mcps-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcps-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcps
  template:
    metadata:
      labels:
        app: mcps
    spec:
      containers:
        - name: mcps
          image: 803635532235.dkr.ecr.ap-southeast-1.amazonaws.com/uwc:mcps
          # imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mcps-srv
spec:
  selector:
    app: mcps
  ports:
    - name: mcps
      protocol: TCP
      port: 3000
      targetPort: 3000
