infra/k8s/k8s-prod/mcps-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcps-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcps-mongo
  template:
    metadata:
      labels:
        app: mcps-mongo
    spec:
      containers:
        - name: mcps-mongo
          image: mongo
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mcps-mongo-srv
spec:
  selector:
    app: mcps-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
