infra/k8s/k8s-prod/mcps-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcps-depl
  labels:
    app: mcps-mysql
spec:
  selector:
    matchLabels:
      app: mcps-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mcps-mysql
    spec:
      containers:
        - name: mcps-mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mcps-mysql-srv
  labels:
    app: mcps-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mcps-mysql
  type: ClusterIP
