infra/k8s/k8s-prod/rabbitmq-pod-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-mongo
  template:
    metadata:
      labels:
        app: rabbitmq-mongo
    spec:
      containers:
        - name: rabbitmq-mongo
          image: mongo
          # imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-mongo-srv
spec:
  selector:
    app: rabbitmq-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
