infra/k8s/k8s-prod/vehicles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicles
  template:
    metadata:
      labels:
        app: vehicles
    spec:
      containers:
        - name: vehicles
          image: 803635532235.dkr.ecr.ap-southeast-1.amazonaws.com/uwc:vehicles
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vehicles-srv
spec:
  selector:
    app: vehicles
  ports:
    - name: vehicles
      protocol: TCP
      port: 3000
      targetPort: 3000
